--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "format-write": "prettier --write .",
     "format-check": "prettier --check .",
-    "test": "node --experimental-vm-modules node_modules/.bin/mocha ./"
+    "test": "mocha ./"
   },
   "dependencies": {
     "chalk": "^5.3.0",
