--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,3 +22,9 @@ jobs:
 
       - name: Run linter
         run: npm run lint
+
+      - name: Run Tests
+        run: npm run test
+
+      - name: Run formatter
+        run: npm run format-check
