--- a/.github/workflows/comment.yaml
+++ b/.github/workflows/comment.yaml
@@ -1,12 +1,20 @@
-example_comment_pr:
-  runs-on: ubuntu-latest
-  name: An example job to comment a PR
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+name: virus-scanner
 
-    - name: Comment PR
-      uses: thollander/actions-comment-pull-request@v2
-      with:
-        message: |
-          Hello world ! :wave:
+on:
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  example_comment_pr:
+    runs-on: ubuntu-latest
+    name: An example job to comment a PR
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: |
+            Hello world ! :wave:
